packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/valid/merge-multiple-files/equivalent-event-type-properties/input-001.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if equivalent definitions of the properties of an event type are actually
treated as equivalent in stead of being refused as conflicting definitions.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" compress="true" data-type="string:10:cs"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" unique="false" optional="false" multivalued="false" merge="drop"/>
          <property name="b" object-type="a" description="a" unique="false" optional="false" multivalued="false" merge="drop"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <!-- Property order has changed, optional 'merge' attribute with default value 'drop' has been omitted -->
          <property name="b" object-type="a" description="a" unique="false" optional="false" multivalued="false"/>
          <property name="a" object-type="a" description="a" unique="false" optional="false" multivalued="false"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
